<!--
  ~ Created By Pavankumar.camp.Vesit Library
  ~ Copyright(c) 2017
  ~ No Content can me modified or used without any permission
  ~ All Rights Reserved to VESIT LIBRARY AND DEVELOPERS
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFD8DC"
    android:screenOrientation="portrait">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        tools:ignore="UselessParent"
        android:layout_below="@id/toolbar"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="2dp">

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:id="@+id/card_view1"
                card_view:cardBackgroundColor="#ffffff"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="3dp"
                card_view:contentPadding="5dp"
                android:background="@color/bg_screen2"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="60dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/disclaimer_name"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:fontFamily="Sans-serif"
                    android:text="@string/disclaimer_title"
                    android:textSize="30sp"
                    android:paddingLeft="10dp"
                    android:gravity="top|center_horizontal"
                    android:textAlignment="center"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />
            </android.support.v7.widget.CardView>

            <!--
   ~ Created By Pavankumar.camp.Vesit Library
   ~ Copyright(c) 2017
   ~ No Content can me modified or used without any permission
   ~ All Rights Reserved to VESIT LIBRARY AND DEVELOPERS
   ~
   -->

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:screenOrientation="portrait"
                android:layout_margin="10dp"
                android:background="#CFD8DC"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="3dp">

                <!--suppress AndroidDomInspection -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/holder_relative_layout"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:background="@color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/t1"
                        android:layout_gravity="left"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        android:fontFamily="Sans-serif"
                        android:textColor="#000000"
                        android:text="@string/disclaimer_body_1"
                        android:paddingLeft="10dp"
                        android:paddingRight="5dp"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/disclaimer_body_3"
                        android:layout_gravity="left"
                        android:id="@+id/t2"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        android:fontFamily="Sans-serif"
                        android:textColor="#000000"
                        android:paddingLeft="10dp"
                        android:paddingRight="5dp"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/disclaimer_body_2"
                        android:id="@+id/t3"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        android:fontFamily="Sans-serif"
                        android:textColor="#000000"
                        android:paddingLeft="10dp"
                        android:paddingRight="5dp"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_4_the_availability_of_books_can_be_less_than_expected_because_of_removing_of_old_edition_book_and_reserved_for_reference_section_from_list_so_consider_it_as_5_as_count"
                        android:id="@+id/t4"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="left"
                        android:textSize="20sp"
                        android:fontFamily="Sans-serif"
                        android:textColor="#000000"
                        android:paddingLeft="10dp"
                        android:paddingRight="5dp"
                        tools:ignore="RtlHardcoded" />

                </LinearLayout>


            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>